sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var L = getNombreValeurs()
  var i=0
  while (i <L){
		 if (getValeur(i)> getValeur(i+1)) {
    	echange(i, i+1)
      if (i!=0) {
      i = i-1
      }
  	}
    else if (getValeur(i)< getValeur(i+1) && i!=L) {
      i=i+1
    }
  }
  return
}